# dpu_offload_service

./: .gitignore  INSTALL.md  Makefile.am  README.md  RUN.md  autogen.sh  configure.ac
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
contrib/: DPU-offload-guide.docx  OFFLOAD_TUTORIAL.md  build.sh  dpu-salloc-bfdev.sh  dpu_alltoallv.sbatch  dpu_utils.sh
daemons/: Makefile.am  default_dpu_daemon.c
daemons/default/: Makefile.am  default_dpu_daemon.c  default_dpu_daemon_client.c  default_dpu_daemon_server.c
daemons/job_persistent/: Makefile.am  job_persistent_dpu_daemon.c
daemons/single/: Makefile.am  single.c
doc/: Makefile  architecture.md  bootstrap_execution_flow_chart.dot  configfile.md  debugging.md  doxygen.cfg  endpoint_cache.md  notifications.md  ucc_integration.md
doc/html/: classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dpu__offload__common_8h.html  dpu__offload__common_8h__dep__incl.md5  dpu__offload__common_8h__incl.md5  dpu__offload__common_8h_source.html  dpu__offload__debug_8h.html  dpu__offload__debug_8h__incl.map  dpu__offload__envvars_8h.html  dpu__offload__envvars_8h__dep__incl.map  dpu__offload__envvars_8h__dep__incl.md5  dpu__offload__event__channels_8c__incl.md5  dpu__offload__event__channels_8h.html  dpu__offload__event__channels_8h__dep__incl.map  dpu__offload__event__channels_8h__dep__incl.md5  dpu__offload__event__channels_8h_source.html  dpu__offload__mem__mgt_8h__incl.map  dpu__offload__mem__mgt_8h_source.html  dpu__offload__ops_8c.html  dpu__offload__ops_8h__dep__incl.md5  dpu__offload__service__daemon_8c__incl.map  dpu__offload__service__daemon_8c__incl.md5  dpu__offload__service__daemon_8h__dep__incl.map  dpu__offload__service__daemon_8h__dep__incl.md5  dpu__offload__service__daemon_8h__incl.map  dpu__offload__service__daemon_8h__incl.md5  dpu__offload__service__daemon_8h_source.html  dpu__offload__types_8h__dep__incl.map  dpu__offload__types_8h__dep__incl.md5  dpu__offload__types_8h__incl.md5  dpu__offload__utils_8c__incl.md5  dpu__offload__utils_8h__dep__incl.map  dpu__offload__utils_8h_source.html  dpu__offload__xgvmi_8c.html  dynamic__structs_8h__incl.map  dynamic__structs_8h__incl.md5  dynamic__structs_8h_source.html  files.html  functions_b.html  (+117 more)
doc/latex/: dpu__offload__common_8h.tex  dpu__offload__common_8h__dep__incl.md5  dpu__offload__comms_8h__dep__incl.md5  dpu__offload__comms_8h__incl.md5  dpu__offload__debug_8h.tex  dpu__offload__debug_8h__incl.md5  dpu__offload__envvars_8h.tex  dpu__offload__event__channels_8c.tex  dpu__offload__event__channels_8h.tex  dpu__offload__event__channels_8h__incl.md5  dpu__offload__mem__mgt_8h__dep__incl.md5  dpu__offload__mem__mgt_8h__incl.md5  dpu__offload__ops_8c__incl.md5  dpu__offload__ops_8h__incl.md5  dpu__offload__service__daemon_8c.tex  dpu__offload__service__daemon_8h.tex  dpu__offload__service__daemon_8h__incl.md5  dpu__offload__types_8h__dep__incl.md5  dpu__offload__types_8h__incl.md5  dpu__offload__utils_8c.tex  dpu__offload__xgvmi_8c.tex  dynamic__structs_8h.tex  dynamic__structs_8h__dep__incl.md5  files.tex  host__dpu__offload__service_8c.tex  host__dpu__offload__service_8h.tex  host__dpu__offload__service_8h__incl.md5  inter__dpus__comm_8c__incl.md5  refman.tex  structam__header.tex  structboostrapping.tex  structcache.tex  structcache__coll__graph.md5  structcache__entry__request.tex  structconnect__to__service__proc__coll__graph.md5  structconnected__clients__coll__graph.md5  structconnected__peer__data.tex  structdpu__config__data.tex  structdpu__offload__ev__sys__coll__graph.md5  structdpu__offload__event__coll__graph.md5  (+38 more)
docs/: configfile.md  connect_execution_flow_chart.dot  doxygen.cfg  execution_context.md
docs/html/: annotated.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dpu__offload__common_8h__dep__incl.map  dpu__offload__common_8h__incl.map  dpu__offload__comms_8h.html  dpu__offload__comms_8h__dep__incl.map  dpu__offload__comms_8h__dep__incl.md5  dpu__offload__comms_8h__incl.map  dpu__offload__comms_8h__incl.md5  dpu__offload__comms_8h_source.html  (+150 more)
include/: Makefile.am  dpu_offload_common.h  dpu_offload_envvars.h  dpu_offload_event_channels.h  dpu_offload_group_cache.h  dpu_offload_ops.h  dpu_offload_service_daemon.h  dpu_offload_types.h  dpu_offload_utils.h  dynamic_list.h  dynamic_structs.h  host_dpu_offload_service.h
src/: .dpu_offload_event_channels.c.swp  Makefile.am  dpu_offload_comm_channels.h  dpu_offload_comms.h  dpu_offload_debug.h  dpu_offload_event_channels.c  dpu_offload_group_cache.c  dpu_offload_group_cache.h  dpu_offload_mem_mgt.h  dpu_offload_ops.c  dpu_offload_service_daemon.c  dpu_offload_utils.c  dpu_offload_xgvmi.c  host_dpu_offload_service.c  inter_dpus_comm.c
tests/: Makefile.am  debugging.md
tests/cache/: Makefile.am  cache_client  cache_client.c  cache_dpu_daemon.c  cache_job_client.c  cache_server  cache_server.c  group_hash_test.c  hostname_hash_test.c  test_cache.c  test_cache_common.h
tests/comms/: Makefile.am  self_comm.c  self_notif_mem_pools.c
tests/config/: Makefile.am  config_file.c  config_file_dpu.c  config_file_host.c
tests/dyn_structs/: Makefile.am  dyn_structs_test.c  smart_buffers_test.c
tests/offload_service/: Makefile.am  common_test_params.h
tests/offload_service/basic/: Makefile.am  daemon_basic_init.c
tests/offload_service/client/: Makefile.am  client.c  client_common.h  client_external_worker.c  fake_mpi_rank.c  simple.c  start_fake_mpi_ranks.sh
tests/offload_service/multi_services/: Makefile.am  README.md  multi_engines_utils.h  two_engines_dpu.c  two_engines_host.c
tests/offload_service/multi_services/etc/: local_test_service1.cfg  local_test_service2.cfg
tests/offload_service/server/: Makefile.am  server.c
tests/ping_pong/: Makefile.am  README.md  client_ping_pong.c  dpu_ping_pong.c  ping_pong.h
tests/process_spawn/: Makefile.am  dpu_process_spawn.c
tests/telemetry/: Makefile.am  README.md  client_telemetry.c  dpu_telemetry.c  telemetry.h
(+196 files in other folders)
