# -*- shell-script -*-
#
# Copyright 2021 NVIDIA CORPORATIONS. All rights reserved.
#
# See COPYING in top-level directory.
#
# Additional copyrights may follow
#
# $HEADER$
#

SUBDIRS = src daemons include

EXTRA_DIST =    \
    COPYING     \
    INSTALL     \
    README.md

ACLOCAL_AMFLAGS = -I m4