# -*- shell-script -*-
#
# Copyright 2022 NVIDIA CORPORATIONS. All rights reserved.
#
# See COPYING in top-level directory.
#
# Additional copyrights may follow
#
# $HEADER$
#

nobase_include_HEADERS = dpu_offload_common.h \
                        dpu_offload_envvars.h \
                        dpu_offload_event_channels.h \
                        dpu_offload_ops.h \
                        dpu_offload_service_daemon.h \
                        dpu_offload_types.h \
                        dpu_offload_utils.h \
                        dynamic_structs.h \
                        dpu_offload_group_cache.h \
                        host_dpu_offload_service.h