# -*- shell-script -*-
#
# Copyright 2021-2022 NVIDIA CORPORATIONS. All rights reserved.
#
# See COPYING in top-level directory.
#
# Additional copyrights may follow
#
# $HEADER$
#

bin_PROGRAMS = dyn_structs_test

dyn_structs_test_SOURCES = dyn_structs_test.c
AM_LDFLAGS = -lucp
AM_CFLAGS = -I@top_srcdir@/include -L@top_srcdir@/src/.libs