# -*- shell-script -*-
#
# Copyright 2021-2022 NVIDIA CORPORATIONS. All rights reserved.
#
# See COPYING in top-level directory.
#
# Additional copyrights may follow
#
# $HEADER$
#

bin_PROGRAMS = dpu_process_spawn

dpu_process_spawn_SOURCES = dpu_process_spawn.c
dpu_process_spawn_LDADD = ../../src/libdpuoffloadservice.la
dpu_process_spawn_CPPFLAGS = -I@top_srcdir@/include
